<resources>
    <string name="app_name">SIPPPID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Beranda</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_apermohonan">Ajukan Permohonan</string>
    <string name="nav_permohonan">Permohonan Saya</string>
    <string name="nav_akeberatan">Ajukan Keberatan</string>
    <string name="nav_keberatan">Keberatan</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Beranda</item>
        <item>Profil</item>
        <item>Ajukan Permohonan</item>
        <item>Permohonan Saya</item>
        <item>Ajukan Keberatan</item>
        <item>Keberatan</item>
        <item>Logout</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_faq">FAQ</string>
    <string name="action_about_us">About Us</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>